--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name=".MyApplication"
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
@@ -41,6 +42,7 @@
         <activity android:name=".Heading"
             android:label="Installation"
             />
+
     </application>
 
 </manifest>
